src/ui/snapshots/lazydatabricks__ui__tests__clusters_80x24-2.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Detail ⠋──────────────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Name           shared-analytics                    │"
"│3 of 3 compute · 0s ago  ││Cluster ID     0801-120000-shared001               │"
"│◐ 1 · ✗ 1 · ● 2          ││State          ◐ PENDING                           │"
"└─────────────────────────┘│Message        Starting Spark                      │"
"┌─[2]─Jobs by activity────┐│Source         UI                                  │"
"│ 2h ◐ [someone] okonomi_…││Creator        other@example.com                   │"
"│ 1d ✗ nightly_bronze_ing…││Spark          14.3.x-scala2.12                    │"
"│    · weekly_report      ││Size           Standard_E8s_v3                     │"
"└───────────────────1 of 3┘│Workers        8                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│Started        01.09 12:06                         │"
"│                   ┌ Actions ─────────────────────────────┐                   │"
"│                   │Terminate cluster: shared-analytics   │                   │"
"└───────────────────└─read-only: --allow-actions to enable─┘                   │"
"┌─[4]─Compute─────────────┐│                                                   │"
"│● job-1025322370191789-r…│└───────────────────────────────────────────────────┘"
"│◐ shared-analytics       │┌─API log───────────────────────────────────────────┐"
"│· someone's interactive  ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────2 of 3┘└───────────────────────────────────────────────────┘"
" Choose: j/k │ Confirm: Enter │ Close: Esc                                v0.0.0"
