src/ui/snapshots/lazydatabricks__ui__tests__clusters_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Detail ⠋──────────────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Name           shared-analytics                    │"
"│3 of 3 clusters · 0s ago ││Cluster ID     0801-120000-shared001               │"
"└─────────────────────────┘│State          ◐ PENDING                           │"
"┌─[2]─Jobs by activity────┐│Message        Starting Spark                      │"
"│ 2h ◐ [someone] okonomi_…││Source         UI                                  │"
"│ 1d ✗ nightly_bronze_ing…││Creator        other@example.com                   │"
"│    · weekly_report      ││Spark          14.3.x-scala2.12                    │"
"│                         ││Node type      Standard_E8s_v3                     │"
"└───────────────────1 of 3┘│Workers        8                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│Started        01.09 12:06                         │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         │└───────────────────────────────────────────────────┘"
"└───────────────────0 of 0┘┌─API log───────────────────────────────────────────┐"
"┌─[4]─Clusters────────────┐│GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│● job-1025322370191789-r…││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│◐ shared-analytics       ││                                                   │"
"│· someone's interactive  ││                                                   │"
"│                         ││                                                   │"
"└───────────────────2 of 3┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
