src/ui/snapshots/lazydatabricks__ui__tests__compute_warehouses_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Detail ⠋──────────────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││Name           shared-bi                           │"
"│2 of 2 compute · 0s ago  ││Warehouse ID   0f1e2d3c4b5a6978                    │"
"│◐ 1 · ✗ 1 · ● 1          ││State          ● RUNNING                           │"
"└─────────────────────────┘│Message        auto-stop after 45 min              │"
"┌─[2]─Jobs by activity────┐│Source         SQL warehouse, serverless           │"
"│ 2h ◐ [someone] okonomi_…││Creator        other@example.com                   │"
"│ 1d ✗ nightly_bronze_ing…││Spark          -                                   │"
"│    · weekly_report      ││Size           Medium                              │"
"└───────────────────1 of 3┘│Workers        1                                   │"
"┌─[3]─Pipelines ⠋ by activ┐│Started        -                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘│                                                   │"
"┌─[4]─Compute─────────────┐│                                                   │"
"│· Serverless Starter War…│└───────────────────────────────────────────────────┘"
"│● shared-bi              │┌─API log───────────────────────────────────────────┐"
"│                         ││GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────2 of 2┘└───────────────────────────────────────────────────┘"
" Move: j/k │ Filter: / │ Mine: m │ Status: f │ Actions: x │ Quit: q │ Keys: ?   "
