src/ui/snapshots/lazydatabricks__ui__tests__config_tab_80x24.snap
---
source: src/ui/mod.rs
expression: render(&app)
---
"┌─[1]─Status──────────────┐┌─[0]─Profile - Config ⠋────────────────────────────┐"
"│◐ dev → adb-1.azuredatabr││# config.toml (not found, defaults)                │"
"│3 of 3 jobs · 0s ago     ││                                                   │"
"│◐ 1 · ✗ 1 · ● 0          ││profiles = []                                      │"
"└─────────────────────────┘│max_jobs = 200                                     │"
"┌─[2]─Jobs by activity────┐│mine_only = false                                  │"
"│ 2h ◐ [someone] okonomi_…││status = "all"                                     │"
"│ 1d ✗ nightly_bronze_ing…││compute = true                                     │"
"│    · weekly_report      ││expand_focused = true                              │"
"│                         ││check_updates = false                              │"
"└───────────────────1 of 3┘│nerd_fonts = false                                 │"
"┌─[3]─Pipelines ⠋ by activ┐│confirm_on_quit = false                            │"
"│                         ││quit_on_top_level_return = false                   │"
"│                         ││allow_actions = false                              │"
"│                         ││me_aliases = []                                    │"
"│                         │└───────────────────────────────────────────────────┘"
"└───────────────────0 of 0┘┌─API log───────────────────────────────────────────┐"
"┌─[4]─Compute ⠋───────────┐│GET  /api/2.2/jobs/list?limit=25        200    84ms│"
"│                         ││GET  /api/2.2/jobs/runs/list?job_id=1&… 200   131ms│"
"│                         ││                                                   │"
"│                         ││                                                   │"
"│                         ││                                                   │"
"└───────────────────0 of 0┘└───────────────────────────────────────────────────┘"
" Focus: 0-4/Tab │ Screen: + │ Log: @ │ Quit: q │ Keys: ?                  v0.0.0"
